--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "X-tra Telegram",
+  "name": "DemonBoT",
   "description": "Userbot created by a SNAPDRAGON and custom fork by DemonHuB\n\n join https://t.me/thedemonhub for any problems or support",
   "logo": "https://telegra.ph/file/a87a291f882a8c170ae2c.jpg",
   "keywords": [
